# Sensor-test

./: Sensor-test.code-workspace  nova.py  system-diagram
Jupyter/: 10-3-2023  -  13-55.csv  15-3-2023  -  15-6.csv  15-3-2023  -  16-0.csv  15-3-2023  -  17-8.csv  16-3-2023  -  13-31.csv  16-3-2023  -  9-44.csv  17-3-2023  -  13-49.csv  2023-05-23_10-02-22.csv  2023-05-23_10-04-15.csv  2023-05-23_10-06-02.csv  2023-05-23_10-08-08.csv  2023-05-23_10-11-38.csv  22-3-2023  -  14-54.csv  22-9-2023  -  10-38.csv  28-3-2023  -  10-31.csv  30-10-2023  -  18-51.csv  30-3-2023  -  11-25.csv  7-8-2023  -  13-52.csv  8-3-2023  -  10-37.csv  8-3-2023  -  11-46.csv  9-8-2023  -  14-54.csv  Global.ipynb  HPMA115_power.csv  NEXTPM_current.csv  NextPM fan_current.csv  NextPM laser_current.csv  NextPM_power.csv  PMdataanalysis2sensor.ipynb  PMdataanalysis4sensor.ipynb  PMdataanalysis5sensor.ipynb  PMdataanalysisSPSnestPM.ipynb  SDS011 fan_current.csv  SDS011 laser_current.csv  SDS011_current.csv  SDS011_power.csv  SEN55 Fan_current.csv  SEN55 Laser_current.csv  SEN55_current.csv  SEN55_power.csv  SPS30 Fan_current.csv  (+15 more)
Power-mon/: platformio.ini
Sensor-test/: .~lock.pm25_2023-05-22_11-50-18.csv#  pm25_2023-05-11_16-24-43.csv  pm25_2023-05-22_11-50-18.csv
sensd/: ergo-pw.kibot.yaml  fp-info-cache  metadata.txt  sensd.kicad_pcb  sensd.kicad_prl  sensd.kicad_pro  sensd.kicad_pro-bak  sensd.kicad_sch  sensd.kicad_sch-bak  (+1 more)
zephyrproject/app/: CMakeLists.txt  Kconfig  prj.conf
zephyrproject/app/boards/: teensy41-pinctrl.dtsi  teensy41.overlay
zephyrproject/app/src/: main.c
(+42 files in other folders)
